--- a/gb/24/11/29/n14381555.md
+++ b/gb/24/11/29/n14381555.md
@@ -12,12 +12,15 @@
 <p>“这些指控显然是荒谬的。”声明说，“中国（中共）当局竟公然将外国大使馆视为‘间谍组织’，我们对此感到震惊。”</p>
 <p>董的家人补充说：“他因为在记者生涯中，表现出的独立性而受到迫害。”</p>
 <p>董的家人还引用了法官宣读的、但未与董的律师分享的判决书。</p>
+<h2>美国国务院谴责中共</h2>
+<p>美国国务院周五发表声明，谴责中共重判董郁玉。声明写道：“美国谴责中华人民共和国（共产中国）11月29日，以涉嫌‘间谍罪’对记者董郁玉判处七年监禁的不公正行为。他的被捕和今天的判决，凸显了中华人民共和国未能履行其根据国际法做出的承诺，以及其宪法对所有公民的保障，其中包括言论自由和新闻自由的权利。”</p>
+<p>声明说，美国赞扬董郁玉作为一名资深记者和编辑所做的工作，以及他作为哈佛大学尼曼研究员，为中美民间关系做出的贡献。美国支持董及其家人，并呼吁中共立即无条件释放他。</p>
 <p><ahref="https://x.com/USAmbChina/status/1862432125246394587">美国驻华大使伯恩斯</a>在X上发帖说：“我谴责中国（中共）今天以间谍罪判处中国新闻从业人员董郁玉七年徒刑。中国宪法保障其人民的言论自由，而董郁玉因为行使了自己的言论自由权而遭受惩罚是不公正的。”</p>
 <h2>国际社会谴责</h2>
 <p>2022年2月，62岁的前《光明日报》编辑兼记者董郁玉在与一名日本外交官共进午餐时，被北京警方拘留，随后被指控犯有间谍罪。</p>
 <p>董郁玉经常撰写自由主义倾向评论，多年来，他经常与各国大使馆外交官和记者进行面对面交流。</p>
 <p>和他会面的日本外交官也被中共拘留几个小时，引发日本外交部强烈抗议。日本外交官后来被释放。</p>
-<p>董还曾于2010年担任日本庆应义塾大学客座研究员，并于2014年担任北海道大学客座教授。据董的家人说，前日本驻华大使垂水秀夫是董的多年好友。</p>
+<p>董还曾于2010年担任日本庆应义塾大学客座研究员，并于2014年担任北海道大学客座教授。据董的家人说，前日本驻华大使垂秀夫是董的多年好友。</p>
 <p>对董郁玉的拘留和宣判，凸显中国自由思想知识分子的空间越来越狭窄。中共党魁在2012年上台后，开始打击公民社会和不同政见。判决也表明中共政府对与外国有联系的人的怀疑日益加深，北京试图限制这种曾经是常规的国际交往。</p>
 <p>日本大使馆告诉法新社，不会对此案发表评论。大使馆发言人在一封电子邮件中表示：“无论如何，日本驻外外交使团的外交活动都是合法的。”</p>
 <p>作家伊恩?约翰逊（Ian Johnson）是董郁玉的朋友，他表示，这个判决“表明（中共）政府试图传递一个信息，即与外界正常接触是不受欢迎的。政府没有提供任何证据表明董犯有间谍罪。相反，它提出一个可疑论点，即会见外交官本身就是可疑行为。”</p>
@@ -31,35 +34,33 @@
 <p>2020年，中共当局以国家安全罪名拘留中共国家电视台中央电视台国际频道CGTN的澳大利亚记者成蕾，以及彭博新闻社记者范若伊（Haze Fan）。两人后来均被释放。北京还驱逐了数十名国际记者。</p>
 <p>（本文参考了《卫报》的报导）</p>
 <p>责任编辑：刘颖#</p>
-	
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/23/4/24/n13980773.md#1">前光明日报编辑见日本外交官 被中共控间谍罪</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/23/4/25/n13981116.md#1">国际社会要求中共释放董郁玉 撤销间谍指控</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/23/6/30/n14025578.md#1">中共新版反间谍法将实施 专家批其蔑视人权</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/29/n14381086.md#1">Uniqlo老板：优衣库产品没有使用新疆棉花</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545597.md#1">【一线采访】重庆一工程烂尾 业主维权遭打压</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/9/23/n11541717.md#1" target="_blank">林辉：中共70年前承诺建立美国式民主在哪里？</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md#1" target="_blank">出版24年 42种语言 拥有全球读者的转法轮</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/22/n11132788.md#1" target="_blank">【征文】千百度：上古三代时期的天命观（2）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/1/n11559718.md#1" target="_blank">十一国殇日 港前区议员支持法轮功和平抗议</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/13/n10781787.md#1">苏轼美食路线图：猪羊肉鲜果牡蛎</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/12/16/n12625448.md#1">【元曲大家】马致远的命运三部曲</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/26/n14379252.md#1">《你在哪里》：当真相成为罪行 该如何捍卫正义？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/22/n14376606.md#1">【未解之谜】史前文明存在的铁证？“时空错乱”的神秘文物</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/22/n14376677.md#1">《镇魂曲之九霄琴》：武林梦幻与情感交织的冒险</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/28/n14380872.md#1">【菁英论坛】张又侠主导军队清洗 四中全会摊牌</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/31/n14361863.md#1">【中国禁闻】中共顶级央企全面降薪</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/29/n14381055.md#1">【财经非常道】川普掀关税战 中国出口企业不安</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/27/n14379636.md#1">中共顶级央企已全面降薪？网传内部文件</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/27/n14379788.md#1">新防长据传落马 中共外交部4字回应引关注</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/27/n14379563.md#1">外媒：美国官员称中共防长董军因腐败被查</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/26/n14379387.md#1">晒与78岁母亲合照 邓超发文调皮表达爱意</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/26/n14378904.md#1">韩剧《爱在独木桥》播出两集 收视率翻倍成长</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/27/n14379634.md#1">《不可能的任务8》幕后花絮  阿汤哥水中特技训练</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/27/n14380128.md#1">曾陪胡歌挺过严重车祸 46岁薛佳凝被爆新恋情</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/27/n14380202.md#1">被骗是名牌商品 Netflix女星帮运40公斤大麻被捕</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/21/n14375246.md#1">为什么说咖啡给你的能量只是借给你的</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/27/n14379667.md#1">什么是“第二城市旅游”？ 有何好处？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/26/n14378905.md#1">为什么你不应该亲吻婴儿？ 微生物学家释疑</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/27/n14379774.md#1">【旅行趣】十六湖国家公园：克罗埃西亚必游仙境</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/25/n14378192.md#1">掌握淀粉摄取量 既能稳定血糖 又助于减重</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544980.md#1">【直播】川普签署“大而美法案”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545641.md#1">【马克时空】服务一甲子 F-5告别台湾天空</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545423.md#1">第27届台北电影奖完整名单 《大风之岛》摘首奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540707.md#1">夏日沙拉这样做 清爽又健康 色彩缤纷又开胃</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/11/29/n14381555.htm">中共重判前光明日报编辑董郁玉 美国谴责</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/11/29/n14381555.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
